01 Drum: ToDo: solve problem with vertical alignment

--- a/01Drum/style.css
+++ b/01Drum/style.css
@@ -1,13 +1,18 @@
+body{
+width: 100%;
+height: 100%;
+height: 500px;
+
+}
 .keys {
-    border: 1px solid yellow;
     display: flex;
+    border: 1px solid yellow;
     padding: 3px;
     align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    min-width: 631;
-    height: 80vh;
     text-align: center;
+    align-self: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .key {
@@ -19,10 +24,10 @@
     transition: all 0.07s;
 }
 
-.playing{
-transform: scale(1.5);
-border-color: purple;
-box-shadow: 0 0 10px green;
+.playing {
+    transform: scale(1.5);
+    border-color: purple;
+    box-shadow: 0 0 10px green;
 }
 
 kbd {
